--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AbE4u6irwAIhhi97Q4QV0bPKSx2jIjrU5XAnk_RvuJYCw8zbkwq21U351HX_InOD0SKseeLwHPG2SC7B&currency=USD"></script>
+
   </body>
 </html>
